# now-cli

./: .now.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
src/: cli.rs  config.rs  detect.rs  docker.rs  image.rs  main.rs  ui.rs
