[package]
name = "nowcli"
version = "0.1.0"
edition = "2024"
description = "Invisible, reproducible local toolchains for modern development"
readme = "README.md"
keywords = ["cli", "docker", "task-runner", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "now"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bollard = "0.20"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
futures-util = "0.3"
indicatif = "0.17"
inquire = "0.7"
owo-colors = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "process"] }
uuid = { version = "1.17", features = ["v4"] }
